Avoid overflows caused by animations

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -515,3 +515,7 @@ noscript .localization-selector.link {
     }
   }
 }
+
+footer {
+  overflow: hidden;
+}
